IMPALA-6101: call DataStreamMgr::Cancel() once per query

This is a bit of cleanup left over from the KRPC work that could avoid
some lock contention for queries with large numbers of fragments.

The change is just to do cancellation of receivers once per query
instead of once per fragment.

Change-Id: I7677d21f0aaddc3d4b56f72c0470ea850e34611e
Reviewed-on: http://gerrit.cloudera.org:8080/16901
Reviewed-by: Thomas Tauber-Marshall <tmarshall@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>